# FreeBSD-SecConfAudit

./: CMakeLists.txt  README.md  common.sh  kernel-audit.sh  proc-audit.sh  proc_info.c
